--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-/* .App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-conversion{
+    background-color: #E5F5FE;
+    padding: 30px 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.conversion-title{
+    margin: 0px;
+    font-size: 1.3rem;
+    color: #488FB1;
+    font-weight: bolder;
+    margin-bottom: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-calculate{
+    text-align: center;
+    margin-top: 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-calculate button{
+    background: rgb(193,248,207);
+    background: linear-gradient(270deg, rgba(193,248,207,1) 0%, rgba(79,211,196,1) 100%);
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px 50px;
+    border-radius: 10px;
+    color: #488FB1;
+    font-weight: 900;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
